--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
         }
         stage('Build') {
             steps {
-                dir("/var/lib/jenkins/workspace/New_demo/my-app/") {
+                dir("C:\Users\karan.mehta\.jenkins\workspace\new pipeline") {
                 sh 'mvn -B -DskipTests clean package'
                 }
             
