--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -10,14 +10,14 @@ pipeline {
         stage('Initialize'){
             steps{
                 echo "PATH = ${M2_HOME}/bin:${PATH}"
-                echo "M2_HOME = /opt/maven"
+               // echo "M2_HOME = /opt/maven"
             }
         }
         stage('Build') {
             steps {
-                dir("/var/lib/jenkins/workspace/New_demo/my-app/") {
+                
                 sh 'mvn -B -DskipTests clean package'
-                }
+                
             
             }
         }
